# dao-indexer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  akash.yaml  aws-env  block_logs.txt  create_db.sh  docker-compose.yml  firehose-howto.md  indexer-akash.yaml  reset_schemaindexer_db.sh  schema.txt  test_query.sh
.github/workflows/: rust.yml
migrations/2022-02-20-171942_contract_instantiation/: down.sql  up.sql
migrations/2022-03-09-210533_create_blocks/: down.sql  up.sql
src/: config.rs  db.rs  events.json  historical_parser.rs  indexer.rs  indexing.rs  lib.rs  main.rs  models.rs  util.rs
src/db/: connection.rs  db_builder.rs  db_mapper.rs  db_persister.rs  db_test.rs  db_util.rs  models.rs  persister.rs  schema.rs
src/indexer/: debug.rs  index.rs  msg_cw20_execute.rs  msg_dao_execute.rs  msg_execute_contract.rs  msg_instantiate_contract.rs  msg_stake_cw20_execute.rs  parse.rs  tx.rs  tx_info.rs  wasm_indexer.rs  wasm_indexer_registry.rs
src/indexing/: debug.rs  deleteme.txt  event_map.rs  get_column_def_unused.rs  index.rs  index_message.rs  index_messages.rs  indexer.rs  indexer_macros.rs  indexer_registry.rs  indexers.rs  msg_cw20_execute.rs  msg_cw20_indexer.rs  msg_cw3dao_indexer.rs  msg_cw3dao_instantiate_contract.rs  msg_cw3multisig_execute_contract.rs  msg_cw3multisig_indexer.rs  msg_cw3multisig_instantiate_contract.rs  msg_dao_execute.rs  msg_execute_contract.rs  msg_instantiate_contract.rs  msg_send.rs  msg_set.rs  msg_stake_cw20_execute.rs  msg_stake_cw20_indexer.rs  parse.rs  schema_indexer.rs  schema_indexer_daodao.rs  schema_indexer_macros.rs  test1.txt  test2.txt  test_schema_indexer.rs  tx.rs
src/indexing/index_messages/: README.md  msg_cw20_execute.rs  msg_cw3_multisig_inst_msg.rs  msg_cw3dao_instantiate_contract.rs  msg_cw3multisig_execute_contract.rs  msg_dao_execute.rs  msg_execute_contract.rs  msg_instantiate_contract.rs  msg_send.rs  msg_stake_cw20_execute.rs
src/indexing/indexers/: README.md  msg_cw20_indexer.rs  msg_cw3dao_indexer.rs  msg_cw3multisig_indexer.rs  msg_stake_cw20_indexer.rs
src/util/: contract_util.rs  dao.rs  debug.rs  gov_token.rs  history_util.rs  insert_dao.rs  insert_gov_token.rs  insert_marketing_info.rs  query_stream.rs  schema_dumping.rs  test_contract_insert.rs  transaction_util.rs  update_balance.rs
