[package]
name = "dao_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
base64 = "0.13.0"
bigdecimal = { version="0.1.2" }
num-bigint="0.2.6"
bincode = "1.3.3"
cosmos-sdk-proto = "0.9.0"
cosmrs = {version = "0.4.1", features = ["cosmwasm"] }
cosmwasm-std = "1.0.0-beta5"
cw20 = "0.11.1"
cw20-base = {  version = "0.11", features = ["library"] }
cw3-dao = { path = "../dao-contracts/contracts/cw3-dao" }
diesel = { version = "1.4.8", features = ["postgres", "numeric", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.16"
prost = "0.9.0"
prost-types = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.79"
sha2 = "0.9.1"
stake-cw20 = { path = "../dao-contracts/contracts/stake-cw20" }
tendermint = "0.23.3"
tendermint-rpc = {version = "0.23.3", features = ["websocket-client", "http-client"] }
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }
parallel-stream = "*"
par-stream = "*"

[profile.release]
debug = true
