[package]
name = "dao_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-std = "1.1.0"
base64 = "0.13.0"
bigdecimal = { version="0.1.2" }
num-bigint="0.2.6"
bincode = "1.3.3"
clap = "3.1.15" # for command-line parsing
cosmos-sdk-proto = "0.11.0"
# cosmrs = {features = ["cosmwasm"], git = "https://github.com/cosmos/cosmos-rust.git", branch = "main" }
cosmrs = {features = ["cosmwasm"], version = "0.6.1"}
cosmwasm-std = "1.0.0-beta5"
cw20 = "0.11.1"
cw20-base = {  version = "0.11", features = ["library"] }
diesel = { version = "1.4.8", features = ["postgres", "numeric"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
itertools = "0.10.3"
futures = "0.3.21"
libmath = "0.2.1"
log = "0.4.16"
prost = "0.9.0"
prost-types = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.79"
sha2 = "0.9.1"
cw3-dao = { git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v0.2.5" }
stake-cw20 = { git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v0.2.5" }
tendermint = "0.23.6"
tendermint-rpc = {version = "0.23.6", features = ["websocket-client", "http-client"] }
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }

[profile.release]
debug = true
