[package]
name = "dao_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-std = "1.1.0"
base64 = "0.13.0"
bigdecimal = { version="0.1.2" }
bincode = "1.3.3"
clap = "3.1.15" # for command-line parsing
cosmos-sdk-proto = "0.12.1"
cosmrs = {features = ["cosmwasm"], version = "0.7.0"}
cosmwasm-std = "1.0.0"
cw20-011-1 = { package = "cw20", version = "0.11.1" }
cw20 = "0.13.2"
cw20-base = {  version = "0.13.2", features = ["library"] }
cw3-dao-2-5 = { package = "cw3-dao", git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v0.2.5" }
cw3-dao = { git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v0.3.0" }
cw3-multisig = { git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v0.3.0" }
diesel = { version = "1.4.8", features = ["postgres", "numeric"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
itertools = "0.10.3"
libmath = "0.2.1"
log = "0.4.16"
num-bigint="0.2.6"
prost = "0.10"
prost-types = "0.10"
schemars = "0.8.10"
# sea_query = "0.25.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.79"
sha2 = "0.9.1"
stake-cw20 = { git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v0.2.5" }
tendermint = "0.23.7"
tendermint-proto = "=0.23.7"
tendermint-rpc = {version = "0.23.7", features = ["websocket-client", "http-client"] }
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }

[profile.release]
debug = true
